Add comprehensive Java documentation: collections internals, JVM memory architecture, reference types, and exceptions (#36)
* Initial plan

* Add detailed collections content: implementation details, iterators, LRU, fail-fast/fail-safe, Queue, sorting, and expanded Generics

Co-authored-by: dzmitry-ramaniuk <1633005+dzmitry-ramaniuk@users.noreply.github.com>

* Expand memory management with detailed JVM architecture and GC sections

Co-authored-by: dzmitry-ramaniuk <1633005+dzmitry-ramaniuk@users.noreply.github.com>

* Add comprehensive guide on Reference Types (Weak, Soft, Phantom, ReferenceQueue)

Co-authored-by: dzmitry-ramaniuk <1633005+dzmitry-ramaniuk@users.noreply.github.com>

* Add comprehensive exceptions guide to language basics

Co-authored-by: dzmitry-ramaniuk <1633005+dzmitry-ramaniuk@users.noreply.github.com>

---------

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: dzmitry-ramaniuk <1633005+dzmitry-ramaniuk@users.noreply.github.com>